--- a/css/style.css
+++ b/css/style.css
@@ -52,14 +52,15 @@ body {
   box-shadow : 5px 5px 5px 5px white ;
 }
 .cart {
-  width: 300px;
-  border: 1px solid paleturquoise;
+  width: 400px;
+  /* border: 1px solid paleturquoise; */
   /* height: 500px; */
-  padding: 10px;
-  padding-left: 15px;
-  box-shadow: 10px 10px 20px gray;
+  padding: 15px;
+  /* padding-left: 10px;
+  padding-right: 10px; */
+  /* box-shadow: 10px 10px 20px gray; */
   border-radius: 5px;
-  margin-right: 30px;
+  /* margin-right: 30px; */
   position: fixed;
 }
 /* .cart-main {
@@ -71,16 +72,16 @@ body {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
   }
-  .cart {
-    /* width: 300px; */
-    /* border: 1px solid green; */
-    /* padding: 10px; */
-    /* box-shadow: 10px 10px 20px gray; */
-    /* border-radius: 5px; */
-    /* margin-right: 10px; */
-    /* position: fixed; */
+  /* .cart {
+    width: 300px;
+    border: 1px solid green;
+    padding: 10px;
+    box-shadow: 10px 10px 20px gray;
+     border-radius: 5px;
+    margin-right: 10px;
+    position: fixed;
   }
-  .cart-main {
+  .cart-main { */
 
     padding-right: 10px;
 }
